Bug 428888 - KOrganizer crashes when adding calendar events.
Summary: KOrganizer crashes when adding calendar events.
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: VHI crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
: 434282 443214 444543 446378 449341 451205 460940 462782 465625 468981 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-11-09 15:00 UTC by Andrew
Modified: 2023-10-22 19:41 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.08.3
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (6.57 KB, text/plain)
2022-11-04 12:11 UTC, Marc Joliet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew 2020-11-09 15:00:55 UTC
Application: korganizer (5.15.2 (20.08.2))

Qt Version: 5.15.1
Frameworks Version: 5.75.0
Operating System: Linux 5.9.1-1-default x86_64
Windowing system: X11
Distribution: openSUSE Tumbleweed

-- Information about the crash:
- What I was doing when the application crashed:
I was adding an event into the calendar when the application decided to crash.

-- Backtrace:
Application: KOrganizer (korganizer), signal: Segmentation fault

[New LWP 1717]
[New LWP 3511]
[New LWP 3517]
[New LWP 3524]
[New LWP 3525]
[New LWP 3526]
[New LWP 3527]
[New LWP 3528]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib64/libthread_db.so.1".
0x00007f50e140ea6f in poll () from /lib64/libc.so.6
[Current thread is 1 (Thread 0x7f50e16e5880 (LWP 1712))]

Thread 9 (Thread 0x7f50be33e640 (LWP 3528)):
#0  0x00007f50dfc976b2 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f50ca2370ab in ?? () from /usr/lib64/dri/r600_dri.so
#2  0x00007f50ca236567 in ?? () from /usr/lib64/dri/r600_dri.so
#3  0x00007f50dfc913e9 in start_thread () from /lib64/libpthread.so.0
#4  0x00007f50e1419b73 in clone () from /lib64/libc.so.6

Thread 8 (Thread 0x7f50beb3f640 (LWP 3527)):
#0  0x00007f50dfc976b2 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f50ca2370ab in ?? () from /usr/lib64/dri/r600_dri.so
#2  0x00007f50ca236567 in ?? () from /usr/lib64/dri/r600_dri.so
#3  0x00007f50dfc913e9 in start_thread () from /lib64/libpthread.so.0
#4  0x00007f50e1419b73 in clone () from /lib64/libc.so.6

Thread 7 (Thread 0x7f50c89e6640 (LWP 3526)):
#0  0x00007f50dfc976b2 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f50ca2370ab in ?? () from /usr/lib64/dri/r600_dri.so
#2  0x00007f50ca236567 in ?? () from /usr/lib64/dri/r600_dri.so
#3  0x00007f50dfc913e9 in start_thread () from /lib64/libpthread.so.0
#4  0x00007f50e1419b73 in clone () from /lib64/libc.so.6

Thread 6 (Thread 0x7f50c91e7640 (LWP 3525)):
#0  0x00007f50dfc976b2 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f50ca2370ab in ?? () from /usr/lib64/dri/r600_dri.so
#2  0x00007f50ca236567 in ?? () from /usr/lib64/dri/r600_dri.so
#3  0x00007f50dfc913e9 in start_thread () from /lib64/libpthread.so.0
#4  0x00007f50e1419b73 in clone () from /lib64/libc.so.6

Thread 5 (Thread 0x7f50c9b2f640 (LWP 3524)):
#0  0x00007f50dfc976b2 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f50ca2370ab in ?? () from /usr/lib64/dri/r600_dri.so
#2  0x00007f50ca236567 in ?? () from /usr/lib64/dri/r600_dri.so
#3  0x00007f50dfc913e9 in start_thread () from /lib64/libpthread.so.0
#4  0x00007f50e1419b73 in clone () from /lib64/libc.so.6

Thread 4 (Thread 0x7f50cbfff640 (LWP 3517)):
#0  0x00007f50e140ea6f in poll () from /lib64/libc.so.6
#1  0x00007f50df0f4fbe in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f50df0f50df in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f50e1a14a9b in QEventDispatcherGlib::processEvents (this=0x7f50c4000b60, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007f50e19bbeeb in QEventLoop::exec (this=this@entry=0x7f50cbffec80, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#5  0x00007f50e17dcc9e in QThread::exec (this=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#6  0x00007f50e17ddde1 in QThreadPrivate::start (arg=0x55dcc15c95d0) at thread/qthread_unix.cpp:329
#7  0x00007f50dfc913e9 in start_thread () from /lib64/libpthread.so.0
#8  0x00007f50e1419b73 in clone () from /lib64/libc.so.6

Thread 3 (Thread 0x7f50d8a07640 (LWP 3511)):
#0  0x00007f50df0f2df8 in g_source_ref () from /usr/lib64/libglib-2.0.so.0
#1  0x00007f50df0f2ec8 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f50df0f4403 in g_main_context_prepare () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f50df0f4eeb in ?? () from /usr/lib64/libglib-2.0.so.0
#4  0x00007f50df0f50df in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#5  0x00007f50e1a14a9b in QEventDispatcherGlib::processEvents (this=0x7f50d0000b60, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#6  0x00007f50e19bbeeb in QEventLoop::exec (this=this@entry=0x7f50d8a06c80, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#7  0x00007f50e17dcc9e in QThread::exec (this=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#8  0x00007f50e17ddde1 in QThreadPrivate::start (arg=0x55dcc156b800) at thread/qthread_unix.cpp:329
#9  0x00007f50dfc913e9 in start_thread () from /lib64/libpthread.so.0
#10 0x00007f50e1419b73 in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7f50d9c57640 (LWP 1717)):
#0  0x00007f50e140ea6f in poll () from /lib64/libc.so.6
#1  0x00007f50df0f4fbe in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f50df0f50df in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f50e1a14a9b in QEventDispatcherGlib::processEvents (this=0x7f50cc000b60, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007f50e19bbeeb in QEventLoop::exec (this=this@entry=0x7f50d9c56c30, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#5  0x00007f50e17dcc9e in QThread::exec (this=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#6  0x00007f50e2ac37c7 in ?? () from /usr/lib64/libQt5DBus.so.5
#7  0x00007f50e17ddde1 in QThreadPrivate::start (arg=0x7f50e2b31420) at thread/qthread_unix.cpp:329
#8  0x00007f50dfc913e9 in start_thread () from /lib64/libpthread.so.0
#9  0x00007f50e1419b73 in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f50e16e5880 (LWP 1712)):
[KCrash Handler]
#4  QVector<int>::size (this=0x60) at ../../include/QtCore/../../src/corelib/tools/qvector.h:88
#5  QSortFilterProxyModelPrivate::proxy_to_source (this=0x55dcc1bc6d70, proxy_index=...) at itemmodels/qsortfilterproxymodel.cpp:547
#6  0x00007f50e198a615 in QSortFilterProxyModel::mapToSource (proxyIndex=..., this=0x55dcc1794f80) at itemmodels/qsortfilterproxymodel.cpp:3122
#7  QSortFilterProxyModelPrivate::store_persistent_indexes (this=<optimized out>) at itemmodels/qsortfilterproxymodel.cpp:1220
#8  0x00007f50e198bf6b in QSortFilterProxyModelPrivate::_q_sourceLayoutAboutToBeChanged (this=0x55dcc1bc6d70, sourceParents=..., hint=<optimized out>) at itemmodels/qsortfilterproxymodel.cpp:1598
#9  0x00007f50e19f3b40 in doActivate<false> (sender=0x55dcc1e27a50, signal_index=9, argv=argv@entry=0x7ffe82515530) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:395
#10 0x00007f50e19ece60 in QMetaObject::activate (sender=sender@entry=0x55dcc1e27a50, m=m@entry=0x7f50e1c9ff40 <QAbstractItemModel::staticMetaObject>, local_signal_index=local_signal_index@entry=6, argv=argv@entry=0x7ffe82515530) at kernel/qobject.cpp:3946
#11 0x00007f50e19582c6 in QAbstractItemModel::layoutAboutToBeChanged (this=this@entry=0x55dcc1e27a50, _t1=..., _t2=<optimized out>, _t2@entry=QAbstractItemModel::NoLayoutChangeHint) at .moc/moc_qabstractitemmodel.cpp:578
#12 0x00007f50e11c1324 in IncidenceEditorNG::AttendeeTableModel::setAttendees (attendees=..., this=0x55dcc1e27a50) at /usr/include/qt5/QtCore/qlist.h:160
#13 IncidenceEditorNG::IncidenceAttendee::load (this=0x55dcc1e272f0, incidence=...) at /usr/src/debug/incidenceeditor-20.08.2-1.1.x86_64/src/incidenceattendee.cpp:231
#14 0x00007f50e11b326b in IncidenceEditorNG::CombinedIncidenceEditor::load (this=0x55dcc1b0f990, incidence=...) at /usr/src/debug/incidenceeditor-20.08.2-1.1.x86_64/src/combinedincidenceeditor.cpp:98
#15 0x00007f50e120a386 in IncidenceEditorNG::IncidenceDialogPrivate::handleItemSaveFinish (saveAction=IncidenceEditorNG::EditorItemManager::Create, this=0x55dcc1b209e0) at /usr/include/KF5/AkonadiCore/item.h:817
#16 IncidenceEditorNG::IncidenceDialog::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /usr/src/debug/incidenceeditor-20.08.2-1.1.x86_64/build/src/KF5IncidenceEditor_autogen/include/moc_incidencedialog.cpp:156
#17 0x00007f50e19f3b40 in doActivate<false> (sender=0x7f50d400cc00, signal_index=3, argv=argv@entry=0x7ffe82515890) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:395
#18 0x00007f50e19ece60 in QMetaObject::activate (sender=sender@entry=0x7f50d400cc00, m=m@entry=0x7f50e123f9e0 <IncidenceEditorNG::EditorItemManager::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffe82515890) at kernel/qobject.cpp:3946
#19 0x00007f50e11b285b in IncidenceEditorNG::EditorItemManager::itemSaveFinished (_t1=IncidenceEditorNG::EditorItemManager::Create, this=0x7f50d400cc00) at /usr/src/debug/incidenceeditor-20.08.2-1.1.x86_64/build/src/KF5IncidenceEditor_autogen/include/moc_editoritemmanager.cpp:264
#20 IncidenceEditorNG::ItemEditorPrivate::itemFetchResult (job=<optimized out>, this=0x55dcc1b0f900) at /usr/src/debug/incidenceeditor-20.08.2-1.1.x86_64/src/editoritemmanager.cpp:140
#21 IncidenceEditorNG::EditorItemManager::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /usr/src/debug/incidenceeditor-20.08.2-1.1.x86_64/build/src/KF5IncidenceEditor_autogen/include/moc_editoritemmanager.cpp:131
#22 0x00007f50e19f3b40 in doActivate<false> (sender=0x55dcc1a7e540, signal_index=6, argv=argv@entry=0x7ffe825159e0) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:395
#23 0x00007f50e19ece60 in QMetaObject::activate (sender=sender@entry=0x55dcc1a7e540, m=m@entry=0x7f50e2c25660, local_signal_index=local_signal_index@entry=3, argv=argv@entry=0x7ffe825159e0) at kernel/qobject.cpp:3946
#24 0x00007f50e2bd342c in KJob::result (this=this@entry=0x55dcc1a7e540, _t1=<optimized out>, _t1@entry=0x55dcc1a7e540, _t2=...) at /usr/src/debug/kcoreaddons-5.75.0-1.1.x86_64/build/src/lib/KF5CoreAddons_autogen/include/moc_kjob.cpp:576
#25 0x00007f50e2bd78d3 in KJob::finishJob (this=0x55dcc1a7e540, emitResult=<optimized out>) at /usr/src/debug/kcoreaddons-5.75.0-1.1.x86_64/src/lib/jobs/kjob.cpp:93
#26 0x00007f50e19e9551 in QObject::event (this=0x55dcc1a7e540, e=0x7f50d007eca0) at kernel/qobject.cpp:1314
#27 0x00007f50e25744ff in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x55dcc1a7e540, e=0x7f50d007eca0) at kernel/qapplication.cpp:3630
#28 0x00007f50e19bd52a in QCoreApplication::notifyInternal2 (receiver=0x55dcc1a7e540, event=0x7f50d007eca0) at ../../include/QtCore/5.15.1/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:325
#29 0x00007f50e19bff61 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x55dcc121b600) at kernel/qcoreapplication.cpp:1817
#30 0x00007f50e1a153f3 in postEventSourceDispatch (s=0x55dcc12efe40) at kernel/qeventdispatcher_glib.cpp:277
#31 0x00007f50df0f4ca7 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#32 0x00007f50df0f5028 in ?? () from /usr/lib64/libglib-2.0.so.0
#33 0x00007f50df0f50df in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#34 0x00007f50e1a14a7f in QEventDispatcherGlib::processEvents (this=0x55dcc12fb860, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#35 0x00007f50e19bbeeb in QEventLoop::exec (this=this@entry=0x7ffe82515dd0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#36 0x00007f50e19c4160 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#37 0x000055dcc0f9d521 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/korganizer-20.08.2-1.1.x86_64/src/main.cpp:74
[Inferior 1 (process 1712) detached]

Possible duplicates by query: bug 413978, bug 412439, bug 396884, bug 388331, bug 385197.

Reported using DrKonqi
Comment 1 Justin Zobel 2022-10-30 00:40:22 UTC
Thank you for reporting this crash in KDE software. As it has been a while since this issue was reported, can we please ask you to see if you can reproduce the crash with a recent software version?

If you can reproduce the issue, please change the status to "REPORTED" when replying. Thank you!
Comment 2 Marc Joliet 2022-11-04 12:11:36 UTC
Created attachment 153454 [details]
New crash information added by DrKonqi

korganizer (5.21.2 (22.08.2)) using Qt 5.15.6

I saw this crash when trying to add a task to my calendar (with 5 daily reminders).  I had KMail open in parallel, which seems to have remained unaffected.  The crash happened after clicking "Apply".  I've seen similar crashes before from adding other calendear events, but it's not easily reproducible.  I can usually try creating the same event (with the same event-specific settings, e.g., reminders) immediately afterwards without experiencing a crash.

I am running an as of now up-to-date OpenSuse Tumbleweed.

-- Backtrace (Reduced):
#4  QVector<int>::size (this=0x0) at ../../include/QtCore/../../src/corelib/tools/qvector.h:88
#5  QSortFilterProxyModelPrivate::proxy_to_source (this=0x56512f49f280, proxy_index=...) at itemmodels/qsortfilterproxymodel.cpp:572
#6  0x00007fc93f4a7e92 in QSortFilterProxyModel::mapToSource (proxyIndex=..., this=0x56512f907950) at itemmodels/qsortfilterproxymodel.cpp:3171
#7  QSortFilterProxyModelPrivate::store_persistent_indexes (this=<optimized out>) at itemmodels/qsortfilterproxymodel.cpp:1248
#8  0x00007fc93f4a99eb in QSortFilterProxyModelPrivate::_q_sourceLayoutAboutToBeChanged (this=0x56512f49f280, sourceParents=..., hint=<optimized out>) at itemmodels/qsortfilterproxymodel.cpp:1639
Comment 3 Marc Joliet 2022-11-04 12:14:19 UTC
Changing to reported under the assumption that DrKonqi is correct and my crash is in fact a duplicate of the one reported here.
Comment 4 Marc Joliet 2022-11-04 12:39:17 UTC
Ah, I can add the following:

I was about to try to recreate the task, and found that it had, in face, been created, despite the crash.  However, the due date was wrong:  before the crash I had it set to be due on Nov. 11th, but start on Nov. 7th.  Instead, it was created with both dates set to Nov. 7th.  Also, the access was set to "public" instead of "private".  Everything else was as I had set it, though.  It's almost as if it crashed part-way through overwriting the defaults with my custom values (does that mesh with how calendar event creation actually works?).
Comment 5 Daniel Vrátil 2023-10-14 08:56:50 UTC
*** Bug 434282 has been marked as a duplicate of this bug. ***
Comment 6 Daniel Vrátil 2023-10-14 08:57:29 UTC
*** Bug 443214 has been marked as a duplicate of this bug. ***
Comment 7 Daniel Vrátil 2023-10-14 08:58:05 UTC
*** Bug 462782 has been marked as a duplicate of this bug. ***
Comment 8 Daniel Vrátil 2023-10-14 08:58:24 UTC
*** Bug 465625 has been marked as a duplicate of this bug. ***
Comment 9 Daniel Vrátil 2023-10-14 08:58:38 UTC
*** Bug 468981 has been marked as a duplicate of this bug. ***
Comment 10 Daniel Vrátil 2023-10-14 08:59:15 UTC
*** Bug 460940 has been marked as a duplicate of this bug. ***
Comment 11 Daniel Vrátil 2023-10-14 08:59:52 UTC
*** Bug 444543 has been marked as a duplicate of this bug. ***
Comment 12 Daniel Vrátil 2023-10-14 09:00:24 UTC
*** Bug 451205 has been marked as a duplicate of this bug. ***
Comment 13 Daniel Vrátil 2023-10-14 09:00:44 UTC
*** Bug 449341 has been marked as a duplicate of this bug. ***
Comment 14 Daniel Vrátil 2023-10-14 09:01:04 UTC
*** Bug 446378 has been marked as a duplicate of this bug. ***
Comment 15 Daniel Vrátil 2023-10-22 19:41:37 UTC
Git commit 9e739ee45ade1f6b43cc5bc67f91e7b723d7dddb by Daniel Vrátil.
Committed on 22/10/2023 at 21:37.
Pushed by dvratil into branch 'release/23.08'.

Reset AttendeeTableModel when settings attendees

Reset the model instead of emitting layoutChanged, because setting
attendees may actually result in different number of rows in the model
than before, which should not happen during layout change. This seems
to have mostly worked, but caused crash inside QSortFilterProxyModel
when the number of rows have actually changed (most likely connected
to the trailing empty row).
FIXED-IN: 23.08.3

M  +2    -2    src/attendeetablemodel.cpp
M  +4    -0    src/incidenceattendee.cpp
M  +2    -0    src/incidenceresource.cpp

https://invent.kde.org/pim/incidenceeditor/-/commit/9e739ee45ade1f6b43cc5bc67f91e7b723d7dddb